# lot-salt-suite

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: cpp-pro.md  docs-sync.md  legacy-explorer.md  salt-adapter.md  verifier.md
.codex/agents/: cpp-pro.toml
apps/: AGENTS.md  lot-sim.cpp
cases/lot_tese_migrated/: buz67d_pkn.yaml
cases/validation/: buz67d_pkn_legacy_aligned.yaml  buz67d_pkn_legacy_apbsalt1d_equiv_sigma_theta.yaml  buz67d_pkn_legacy_apbsalt1d_sampling_bridge.yaml  buz67d_pkn_legacy_compliance.yaml  buz67d_pkn_legacy_compliance_next_step_sink.yaml  buz67d_pkn_legacy_compliance_sigma_theta_next_step.yaml  buz67d_pkn_legacy_elastic_compliance.yaml  buz67d_pkn_legacy_sigma_theta_refined_timeseries.yaml  buz67d_pkn_legacy_sigma_theta_static.yaml  buz67d_pkn_legacy_sigma_theta_timeseries.yaml  buz67d_pkn_legacy_static_breakdown.yaml  lot_double_mechanism_reference.yaml  lot_minimal.yaml  lot_pkn_minimal.yaml  lot_pkn_with_leakoff.yaml
docs/: 00_project_overview.md  01_repository_inventory.md  02_lot_formulation.md  03_apb_formulation.md  04_salt_creep_models.md  05_input_output_formats.md  06_validation_plan.md  07_target_architecture.md  08_known_issues.md  09_migration_plan.md  100_diagnostic_pre_runner_fixtures.md  101_diagnostic_pre_runner_controlled_validation.md  102_pkn_diagnostic_pre_runner_regression_comparison.md  103_runtime_wiring_readiness_decision.md  104_limited_fracture_gate_runtime_integration_spec.md  105_limited_fracture_gate_runtime_integration_implementation.md  106_limited_gate_fixtures.md  107_limited_gate_controlled_validation.md  108_limited_gate_runtime_readiness_decision.md  109_real_sigmatheta_initial_source_strategy.md  10_postprocessing_plan.md  110_runtime_sigmatheta_pressure_availability_audit.md  111_post_drilling_initial_state_integration_spec.md  112_limited_gate_real_sigmatheta_readiness_decision.md  113_limited_gate_remains_diagnostic_sigmatheta_source_plan.md  114_sigmatheta_diagnostic_source_implementation.md  115_sigmatheta_diagnostic_controlled_validation.md  116_diagnostic_sigmatheta_gate_readiness_decision.md  117_real_sigmatheta_source_integration_path.md  117_sigmatheta_source_root_cause_diagnosis.md  118_sigmatheta_source_solution_plan.md  119_post_drilling_sigma_theta_provider_implementation.md  11_cli_usage.md  120_sigmatheta_provider_pre_runner_wiring.md  121_sigmatheta_provider_controlled_validation.md  122_sigmatheta_provider_readiness_decision.md  123_elastic_initial_wellbore_sigmatheta_source.md  124_elastic_sigmatheta_analytic_validation.md  125_elastic_sigmatheta_source_readiness_decision.md  126_elastic_sigmatheta_upgrade_field_diagnosis.md  (+117 more)
docs/audits/: R09_pkn_conversion_experiment.md  R09_pkn_conversion_table.csv  R09_pkn_mpi22_audit.md  lot_legacy_inventory.md  non_pkn_models_status.md  pkn_legacy_path.md  saltcreep_backend_controlled_case.md  saltcreep_backend_time_geostatic_case.md  saltcreep_eigen_compatibility_audit.md  saltcreep_radial_displacement_sign_audit.md  saltcreep_timeintegrator_include_boundary.md
docs/prompts/: PROMPTS_SEQUENCIAIS.md  PROMPT_MESTRE_CLAUDE_CODE.md  PROMPT_MESTRE_CODEX.md
include/: AGENTS.md
include/core/: types.hpp
include/coupling/: LotSaltBridgeConfigBuilder.hpp  LotSaltCouplingConfigBuilder.hpp  LotSaltCouplingStep.hpp  LotSaltHydrostaticContext.hpp  LotSaltLithostaticContext.hpp  LotSaltPressureMap.hpp  LotSaltSigmaThetaBreakdown.hpp  LotSaltSigmaThetaDiagnostic.hpp  LotSaltSigmaThetaDiagnosticWriter.hpp  LotSaltSigmaThetaDriver.hpp
include/io/: ApbLotJsonOutputWriter.hpp  CaseParser.hpp  ResultWriter.hpp
include/lot/: ApbLotRunner.hpp  BreakdownDetector.hpp  Buz29PennyDiagnosticRunner.hpp  FractureGateDiagnosticPreRunner.hpp  FractureGateRuntimeWiring.hpp  FractureModelSelector.hpp  InjectionSchedule.hpp  LeakoffCouplingMode.hpp  LeakoffModel.hpp  LimitedFractureGateRuntimeIntegration.hpp  LotTypes.hpp  PennyShapedDiagnosticAdapter.hpp  PennyShapedDiagnosticWriter.hpp  PennyShapedModel.hpp  PknInput.hpp  PknModel.hpp  PknResult.hpp  PknRunner.hpp  (+5 more)
legacy/: AGENTS.md  README.md
postprocess/: AGENTS.md
schemas/: lot_case.schema.yaml
src/: AGENTS.md
tools/: AGENTS.md  analyze_legacy_fracture_trace.py  analyze_phase10_22a_legacy_balance_terms.py  analyze_phase10_22c_unified_legacy_trace.py  analyze_phase10_25a_sigma_theta_refined.py  analyze_phase10_26a_pressure_source_timing.py  analyze_phase11_5a_cgeom_extended.py  analyze_phase11_5b_cgeom_sink_timing.py  audit_buz29_penny_diagnostic_run.py  audit_buz29_penny_diagnostic_runner.py  audit_elastic_initial_wellbore_sigmatheta_source.py  audit_elastic_sigmatheta_upgrade_source.py  audit_legacy_sestsal_standalone_constraint.py  audit_phase10_19b_flowrate_balance.py  audit_phase10_20a_mechanical_compliance.py  audit_phase10_29c_buz29d_case.py  audit_phase11_10c_penny_math_axisymmetric_1rad.py  audit_phase11_10k_fracture_model_selector_guard.py  audit_phase11_10m_fracture_model_parser_schema_integration.py  audit_phase11_10n_fracture_gate_initial_sigmatheta.py  audit_phase11_10p_sigmatheta_initial_state_guard.py  audit_phase11_10s_pressure_sigmatheta_fracture_criterion_guard.py  audit_phase11_10w_fracture_gate_runtime_wiring.py  audit_phase11_10y_diagnostic_pre_runner_runtime_gate.py  audit_phase11_11e_limited_fracture_gate_runtime_integration.py  audit_phase11_11j_runtime_sigmatheta_pressure_availability.py  audit_phase11_11n_sigmatheta_diagnostic_source.py  audit_phase11_5d_summary_maxima.py  audit_phase11_6a_buz29_visco_first_well.py  audit_phase11_7b_selected_model_math.py  audit_phase11_9c_buz29_penny_evidence.py  audit_phase11_9e_buz29_pressure_opening_evidence.py  audit_post_drilling_sigma_theta_provider.py  audit_r09_pkn_conversion.py  audit_sigmatheta_provider_pre_runner_wiring.py  check_phase11_10g_penny_writer_against_fixtures.py  check_phase11_9b_buz29_penny_readiness.py  compare_apb_lot_legacy_vs_modern_modes.py  compare_elastic_sigmatheta_source_with_reference.py  compare_fracture_traces.py  (+114 more)
(+420 files in other folders)
